--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/ygorazambuja/VuexStoreGenerator"
   },
   "version": "0.0.1",
   "engines": {
