--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vuex-store-generator",
   "displayName": "Vuex Store Generator",
   "description": "",
+  "publisher": "ygorazambuja",
   "repository": {
     "type": "git",
     "url": "https://github.com/ygorazambuja/VuexStoreGenerator"
