--- a/package.json
+++ b/package.json
@@ -36,23 +36,26 @@
   },
   "scripts": {
     "vscode:prepublish": "yarn run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "yarn run compile && yarn run lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "compile": "node copyModels.js && tsc -p ./",
+    "watch": "node copyModels.js && tsc -watch -p ./",
+    "pretest": "node copyModels.js && yarn run compile && yarn run lint",
+    "lint": "node copyModels.js && eslint src --ext ts",
+    "test": "node copyModels.js && node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.62.0",
     "@types/glob": "^7.1.4",
     "@types/mocha": "^9.0.0",
     "@types/node": "14.x",
+    "@types/vscode": "^1.62.0",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
+    "@vscode/test-electron": "^1.6.2",
     "eslint": "^8.1.0",
     "glob": "^7.1.7",
     "mocha": "^9.1.3",
-    "typescript": "^4.4.4",
-    "@vscode/test-electron": "^1.6.2"
+    "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "ncp": "^2.0.0"
   }
 }
