--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "displayName": "Vuex Store Generator",
   "description": "",
   "publisher": "ygorazambuja",
-  "icon": "src/assets/vuexsg.png",
+  "icon": "resource/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/ygorazambuja/VuexStoreGenerator"
   },
-  "version": "0.0.6",
+  "version": "0.0.11",
   "engines": {
     "vscode": "^1.62.0"
   },
